--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ title               = "Felix Thoemmes"
 pygmentsuseclasses  = true
 disqusShortname     = "felixthoemmesblogdown"
 pluralizelisttitles = false
-googleAnalytics     = ""
+googleAnalytics     = "UA-99017619-1"
 
 [permalinks]
 fixed = ":title/"
